syntax = "proto3";

package meteroid.api.connectors.v1;

import "api/connectors/v1/models.proto";

message ConnectStripeRequest {
  StripeConnector data = 1;
}

message ConnectStripeResponse {
  Connector connector = 1;
}

message ListConnectorsRequest {
  optional ConnectorTypeEnum connector_type = 1;
}

message ListConnectorsResponse {
  repeated Connector connectors = 1;
}

message DisconnectConnectorRequest {
  string id = 1;
}

message DisconnectConnectorResponse {}

message ConnectHubspotRequest {
  bool auto_sync = 1;
}

message ConnectHubspotResponse {
  string auth_url = 1;
}

message UpdateHubspotConnectorRequest {
  string id = 1;
  bool auto_sync = 2;
}

message UpdateHubspotConnectorResponse {
  Connector connector = 1;
}

message ConnectPennylaneRequest {
  PennylaneConnectorData data = 1;
}

message ConnectPennylaneResponse {
  string auth_url = 1;
}

service ConnectorsService {
  rpc ListConnectors(ListConnectorsRequest) returns (ListConnectorsResponse) {}
  rpc DisconnectConnector(DisconnectConnectorRequest) returns (DisconnectConnectorResponse) {}

  rpc ConnectStripe(ConnectStripeRequest) returns (ConnectStripeResponse) {}
  rpc ConnectHubspot(ConnectHubspotRequest) returns (ConnectHubspotResponse) {}
  rpc UpdateHubspotConnector(UpdateHubspotConnectorRequest) returns (UpdateHubspotConnectorResponse) {}

  rpc ConnectPennylane(ConnectPennylaneRequest) returns (ConnectPennylaneResponse) {}
}
